src/tests/fixtures/input_types/InputTypeInterfaceFunction.ts.expected
-----------------
INPUT
----------------- 
/** @gqlInput */
interface MyInputType {
  // TypeScript lets you define functions using interfaces,
  // but that makes no sense as a GraphQL input type.
  (arg: string): string;
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/input_types/InputTypeInterfaceFunction.ts:5:3 - error: `@gqlInput` types only support property signature members. e.g. `type MyInput = { foo: string }`

If you think Grats should be able to infer this input field, please report an issue at https://github.com/captbaritone/grats/issues.

5   (arg: string): string;
    ~~~~~~~~~~~~~~~~~~~~~~
